// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot - default 1`] = `
<button
  className="Button-sc-ayg7nk-0 kwjPLs"
/>
`;

exports[`Button matches snapshot - large 1`] = `
<button
  className="Button-sc-ayg7nk-0 dOKikv"
/>
`;

exports[`Button matches snapshot - link 1`] = `
<a
  className="Button-sc-ayg7nk-0 kwjPLs"
  href="/"
>
  this is a link
</a>
`;

exports[`Button matches snapshot - medium 1`] = `
<button
  className="Button-sc-ayg7nk-0 kwjPLs"
/>
`;

exports[`Button matches snapshot - primary 1`] = `
<button
  className="Button-sc-ayg7nk-0 ebflCp"
/>
`;

exports[`Button matches snapshot - secondary 1`] = `
<button
  className="Button-sc-ayg7nk-0 jWztje"
/>
`;

exports[`Button matches snapshot - small 1`] = `
<button
  className="Button-sc-ayg7nk-0 kXnpAm"
/>
`;

exports[`ButtonGroup matches snapshot (expand) 1`] = `
<div
  className="Button__ButtonGroup-sc-ayg7nk-1 bhiOme"
/>
`;

exports[`ButtonGroup matches snapshot (not-expand) 1`] = `
<div
  className="Button__ButtonGroup-sc-ayg7nk-1 cTXfyQ"
/>
`;

exports[`ButtonGroup matches snapshot 1`] = `
<div
  className="Button__ButtonGroup-sc-ayg7nk-1 bhiOme"
/>
`;

exports[`ButtonLink matches snapshot (decorated and disabled) 1`] = `
<button
  className="Button__PlainButton-sc-ayg7nk-2 Button__ButtonLink-sc-ayg7nk-3 cfFbvJ"
  disabled={true}
/>
`;

exports[`ButtonLink matches snapshot (decorated) 1`] = `
<button
  className="Button__PlainButton-sc-ayg7nk-2 Button__ButtonLink-sc-ayg7nk-3 gBgRNs"
/>
`;

exports[`ButtonLink matches snapshot 1`] = `
<button
  className="Button__PlainButton-sc-ayg7nk-2 Button__ButtonLink-sc-ayg7nk-3 kDokyw"
/>
`;
